# SpeechRecognition

./: Agreement.py  ButtonState.py  README.md  UDP.py  VoiceCommand.py  display.py  display1.py  speech-recognition-from-microphone-with-endpoint-detection.py  test.py  运行命令.txt
ASRInterface/: ASRInterface.pro  ASRInterface.pro.user.399fe9b  artificialhorizon.cpp  artificialhorizon.h  main.cpp  mylabel.cpp  mylabel.h  ui.txt  widget.cpp  widget.h  widget.ui
PhraseReplacement/: dict.txt  replace.fst
bianjiexiongkong/: README.md  常用命令.md
bianjiexiongkong/install/: local_setup.sh  setup.sh
bianjiexiongkong/install/ar_display/share/ar_display/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bianjiexiongkong/install/ar_display/share/ar_display/cmake/: ar_displayConfig.cmake
bianjiexiongkong/install/ar_display/share/ar_display/launch/: ar_display.launch.py
bianjiexiongkong/install/button_simulator/lib/button_simulator/: button_simulator_node
bianjiexiongkong/install/button_simulator/share/button_simulator/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
bianjiexiongkong/install/button_simulator/share/button_simulator/cmake/: button_simulatorConfig.cmake
bianjiexiongkong/install/chest_interfaces/share/chest_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
bianjiexiongkong/install/communication/include/communication/: protocol_parser.hpp
bianjiexiongkong/install/communication/lib/communication/: communication_node
bianjiexiongkong/install/communication/share/communication/: local_setup.sh  package.sh
bianjiexiongkong/install/controller_display/share/controller_display/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bianjiexiongkong/install/controller_display/share/controller_display/cmake/: ament_cmake_export_dependencies-extras.cmake
bianjiexiongkong/install/voice_processing/include/voice_processing/: keyword_matcher.hpp
bianjiexiongkong/install/voice_processing/lib/voice_processing/: voice_processing_node
bianjiexiongkong/install/voice_processing/share/voice_processing/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bianjiexiongkong/install/web_monitor/lib/web_monitor/: web_monitor_node
bianjiexiongkong/install/web_monitor/share/web_monitor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bianjiexiongkong/install/web_monitor/share/web_monitor/docs/: WSL2_配置说明.md  Windows配置说明.md
bianjiexiongkong/install/web_monitor/share/web_monitor/scripts/: setup_wsl2_network.sh
bianjiexiongkong/install/web_monitor/share/web_monitor/tools/: setup_wsl2_port_forward.bat  setup_wsl2_port_forward.ps1
bianjiexiongkong/log/: latest_build  latest_list
bianjiexiongkong/src/ar_display/: AR显示模块功能.md  CMakeLists.txt
bianjiexiongkong/src/ar_display/include/ar_display/: video_processor.hpp
bianjiexiongkong/src/ar_display/src/: ar_display_node.cpp  video_processor.cpp
bianjiexiongkong/src/button_simulator/: CMakeLists.txt  package.xml
bianjiexiongkong/src/button_simulator/launch/: button_simulator.launch.py
bianjiexiongkong/src/button_simulator/src/: button_simulator_node.cpp
bianjiexiongkong/src/chest_interfaces/: CMakeLists.txt  package.xml
bianjiexiongkong/src/chest_interfaces/config/: video_sources.yaml
bianjiexiongkong/src/chest_interfaces/msg/: VideoSource.msg
bianjiexiongkong/src/communication/: CMakeLists.txt  package.xml
bianjiexiongkong/src/communication/msg/proto/: chest_protocol.proto
bianjiexiongkong/src/communication/src/: communication_node.cpp  protocol_parser.cpp
bianjiexiongkong/src/communication/test/: README.md
bianjiexiongkong/src/communication/test/docs/: test_guide.md  troubleshooting.md
bianjiexiongkong/src/communication/test/test_data/: head_tracking_data.json  test_scenarios.json  vehicle_states.json  voice_commands.json
bianjiexiongkong/src/communication/test/test_scripts/: run_all_tests.sh  test_performance.sh  test_protocol.sh
bianjiexiongkong/src/controller_display/: CMakeLists.txt
bianjiexiongkong/src/controller_display/launch/: controller_display.launch.py
bianjiexiongkong/src/controller_display/src/: controller_display_node.cpp
bianjiexiongkong/src/head_tracking/: CMakeLists.txt  头动解算模块功能.md
bianjiexiongkong/src/head_tracking/include/head_tracking/: kalman_filter.hpp
bianjiexiongkong/src/head_tracking/launch/: head_tracking.launch.py
bianjiexiongkong/src/head_tracking/src/: head_tracking_node.cpp  kalman_filter.cpp
bianjiexiongkong/src/install/: local_setup.sh  setup.sh
bianjiexiongkong/src/launch/: all.launch.py
bianjiexiongkong/src/log/: latest_build
bianjiexiongkong/src/video_source_loader/: CMakeLists.txt
bianjiexiongkong/src/video_source_loader/include/video_source_loader/: video_config_parser.hpp  video_source_loader.hpp
bianjiexiongkong/src/video_source_loader/launch/: video_source_loader.launch.py
bianjiexiongkong/src/video_source_loader/src/: video_config_parser.cpp  video_source_loader_node.cpp
bianjiexiongkong/src/voice_processing/: CMakeLists.txt  语音识别模块功能.md
bianjiexiongkong/src/voice_processing/src/: keyword_matcher.cpp  voice_processing_node.cpp
bianjiexiongkong/src/web_monitor/: README.md  setup.cfg  setup.py
bianjiexiongkong/src/web_monitor/launch/: web_monitor.launch.py
bianjiexiongkong/src/web_monitor/scripts/: start_web_monitor.sh
bianjiexiongkong/test/communication_test/: README.md  monitor_udp.py  start_services.sh  test_head_tracking.py  test_protocol.py
bianjiexiongkong/test/communication_test/config/: vehicle_simulator_config.yaml
bianjiexiongkong/test/communication_test/src/: vehicle_simulator.py
bianjiexiongkong/test/communication_test/web/static/: vehicle_index.html
bianjiexiongkong/说明文档/: readme.md  头盔通讯协议.docx  头盔通讯协议.md  消息格式说明.md
sherpa-onnx-rk3588-streaming-zipformer-small-bilingual-zh-en-2023-02-16/: speech-recognition-from-microphone-with-endpoint-detection.py
(+75 files in other folders)
