<?xml version="1.0"?>
<package format="3">
  <name>button_simulator</name>
  <version>0.1.0</version>
  <description>Button simulator for chest controller</description>
  
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>chest_interfaces</depend>
  
  <!-- 使用宽字符 ncurses 库 -->
  <build_depend>libncursesw-dev</build_depend>
  <exec_depend>libncursesw</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>